fix: backfill Nexus public IDs by repository page